# uttesla

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  clickable.yaml  manifest.json  uttesla.apparmor  uttesla.desktop
qml/: MainPage.qml  uttesla.qml
src/: build.rs  main.rs  qrc.rs
